# Content-Manager

./: .gitignore  README.md  bun.lockb  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: create_database.rs  delete_creator.rs  get_creators.rs  get_prices_by_creator_id_query.rs  link_query.rs  links_crud.rs  mod.rs  new_creator.rs  new_price.rs
src/components/: ConfirmDialog.tsx  CreatorDetails.tsx  CreatorList.tsx  Header.tsx  LinkCard.tsx  LinkList.tsx  LinkSearch.tsx  NewLinkForm.tsx  PriceChart.tsx  PriceForm.tsx
src/pages/: LinksPage.tsx  NewCreator.tsx
src/types/: index.ts
